--- a/Pages/Orders/Create.cshtml
+++ b/Pages/Orders/Create.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h4>Создать</h4>
 
-<h4>Order</h4>
+<h4>заказ</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -44,14 +44,14 @@
                 <span asp-validation-for="Order.CreatedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Добавить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">Назад</a>
 </div>
 
 @section Scripts {
