--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
                     <ul class="navbar-nav flex-grow-1">
                          
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders/Index">Заказы</a>
+                            <h4>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders/Index">Заказы</a></h4>
                         </li>
                     </ul>
                 </div>
