--- a/Pages/Orders/Create.cshtml
+++ b/Pages/Orders/Create.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Create";
+
 }
 
 <h4>Создать</h4>
@@ -56,4 +57,15 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+    // переопределение валидации на стороне клиента
+    $.validator.methods.range = function (value, element, param) {
+        var globalizedValue = value.replace(",", ".");
+        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+    }
+ 
+    $.validator.methods.number = function (value, element) {
+        return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+    }
+    </script>
 }
